fixed age z-index, added partial to index pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -118,10 +118,12 @@ html {
 }
 
 /* BEGIN show action style BEGIN */
-  .show_content p:hover, a:hover{
+  .show_content{
+    p:hover, a:hover{
     -webkit-box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.5);
     -moz-box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.5);
     box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.5);
+    }
   }
   .show_image_block{
     float:right;
@@ -243,6 +245,7 @@ html {
   padding:0px 4px 0px 4px;
   color:#222;
   background-color:rgba(255,255,119,0.9);
+  z-index:10;
 }
 .old_price{
   text-decoration: line-through;
